--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,4 +16,5 @@ nginx_proxy_volume_certs: '{{ nginx_proxy_name }}-certs'
 nginx_proxy_volume_conf: '{{ nginx_proxy_name }}-conf'
 nginx_proxy_volume_dhparam: '{{ nginx_proxy_name }}-dhparam'
 nginx_proxy_volume_html: '{{ nginx_proxy_name }}-html'
+nginx_proxy_volume_htpasswd: '{{ nginx_proxy_name }}-htpasswd'
 nginx_proxy_volume_vhost: '{{ nginx_proxy_name }}-vhost'
