--- a/templates/nginx-proxy.docker-compose.j2.yml
+++ b/templates/nginx-proxy.docker-compose.j2.yml
@@ -29,6 +29,7 @@ services:
       - {{ nginx_proxy_volume_conf }}:/etc/nginx/conf.d
       - {{ nginx_proxy_volume_dhparam }}:/etc/nginx/dhparam
       - {{ nginx_proxy_volume_html }}:/usr/share/nginx/html
+      - {{ nginx_proxy_volume_htpasswd }}:/usr/share/nginx/htpasswd
       - {{ nginx_proxy_volume_vhost }}:/etc/nginx/vhost.d
 
   letsencrypt:
@@ -55,6 +56,7 @@ version: '3.7'
     or not nginx_proxy_volume_conf | regex_search('/')
     or not nginx_proxy_volume_dhparam | regex_search('/')
     or not nginx_proxy_html | regex_search('/')
+    or not nginx_proxy_htpasswd | regex_search('/')
     or not nginx_proxy_vhost | regex_search('/') -%}{{''}}
 volumes:
 {%- if not nginx_proxy_volume_certs | regex_search('/') -%}{{''}}
@@ -68,6 +70,9 @@ volumes:
 {%- endif -%}{{''}}
 {%- if not nginx_proxy_volume_html | regex_search('/') -%}{{''}}
   {{ nginx_proxy_volume_html }}:
+{%- endif -%}{{''}}
+{%- if not nginx_proxy_volume_htpasswd | regex_search('/') -%}{{''}}
+  {{ nginx_proxy_volume_htpasswd }}:
 {%- endif -%}{{''}}
 {%- if not nginx_proxy_volume_vhost | regex_search('/') -%}{{''}}
   {{ nginx_proxy_volume_vhost }}:
